# PDFTools

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPENDENCIES.md  DEPENDENCY_GRAPH.txt  EXTRACTION_GUIDE.md  LICENSE  Makefile  README.md  compare_all_versions.py  count_words.py  discard_tracker.py  extracted_paragraphs.txt  final_comparison.py  pdf2text.py  pdftext_utils.py  pyproject.toml  requirements.txt  sl_pdfviewer.py  split_pdf_file.py
analysis/: show_examples.py  show_real_examples.sh  verify_sentences.py
app/: .gitignore  README.md  app.py  viewer.py
data/: 536_chapters.json  discard_tracking.txt  extracted_with_tracking.txt  paper_chapters.json
docs/: CHANGELOG.md  PDF_Sent_Para_Extraction.md  README.md  SETUP.md
pdftools/: analyze_special_content.py  compare_all_versions.py  compare_extractions.py  compare_paragraphs.py  extract_book_chapter.py  extract_paragraphs.py  extract_sentences.py  merge_pdfs.py  pdf_highlighter.py  pdfpages2images.py  pdftext_utils.py  sl_pdfviewer.py  split_pdf_file.py
scripts/: extract_paragraphs.py  extract_sentences.py  pdfpages2images.py  remove_pdf_pages.py
tests/: conftest.py  test_count_words.py  test_discard_tracker.py  test_extract_book_chapter.py  test_extract_paragraphs.py  test_extract_sentences.py  test_merge_pdfs.py  test_pdf2text.py  test_pdfpages2images.py  test_pdftext_utils.py  test_remove_pdf_pages.py  test_sl_pdfviewer.py  test_split_pdf_file.py
